--- a/_config.yml
+++ b/_config.yml
@@ -626,9 +626,16 @@ issues:
     - apollo
     - mlogit
     - gmnl
+    - Formula
+    - rstan
+    - bayesplot
+    - shinystan
+    - parallel
     CTV_rev:
     - Econometrics
+    - Bayesian
     - SocialSciences
+    suppl: 1.6 Kb
     landing: '2021'
   - slug: RJ-2021-016
     title: 'NTS: An R Package for Nonlinear Time Series Analysis'
