--- a/_config.yml
+++ b/_config.yml
@@ -684,6 +684,7 @@ issues:
     - Finance
     - FunctionalData
     - SocialSciences
+    suppl: 3 Kb
     landing: '2021'
   - slug: RJ-2021-017
     title: 'Species Distribution Modeling using Spatial Point Processes: a Case Study
