--- a/_config.yml
+++ b/_config.yml
@@ -727,6 +727,7 @@ issues:
     - OfficialStatistics
     - Phylogenetics
     - TeachingStatistics
+    suppl: 1.8 Kb
     landing: '2021'
   - slug: RJ-2021-018
     title: 'A Graphical EDA Tool with ggplot2: brinton'
