--- a/_config.yml
+++ b/_config.yml
@@ -734,11 +734,11 @@ issues:
     bibtitle: 'A Graphical EDA Tool with ggplot2: brinton'
     author:
     - Pere Millán-Martínez
-    - Ramon Oller-Piqué
-    bibauthor: Pere Millán-Martínez and Ramon Oller-Piqué
+    - Ramon Oller
+    bibauthor: Pere Millán-Martínez and Ramon Oller
     abstract: '  Abstract We present brinton package, which we developed for graphical
-      exploratory data analysis            in R. Based on ggplot2, gridExtra and rmarkdown,
-      brinton package introduces wideplot() graphics            for exploring the
+      exploratory data analysis in            R. Based on ggplot2, gridExtra and rmarkdown,
+      brinton package introduces wideplot() graphics for            exploring the
       structure of a dataset through a grid of variables and graphic types. It also
       introduces            longplot() graphics, which present the entire catalog
       of available graphics for representing a particular            variable using
@@ -754,13 +754,9 @@ issues:
     CRANpkgs:
     - brinton
     - ggplot2
-    - gridExtra
     - rmarkdown
-    - graphics
-    - grid
     - lattice
     - survminer
-    - tabplot
     - visdat
     - inspectdf
     - xray
