--- a/_config.yml
+++ b/_config.yml
@@ -823,11 +823,11 @@ issues:
     - deal
     - pcalg
     - HydeNet
-    - abn
     CTV_rev:
     - gR
     - Bayesian
     - HighPerformanceComputing
+    suppl: 1.9 Kb
     landing: '2021'
   - slug: RJ-2021-021
     title: 'OpenLand: Software for Quantitative Analysis and Visualization of Land
