--- a/_config.yml
+++ b/_config.yml
@@ -874,6 +874,7 @@ issues:
     - Spatial
     - SpatioTemporal
     - TeachingStatistics
+    suppl: 2 Kb
     landing: '2021'
   - slug: RJ-2021-023
     title: 'FarmTest: An R Package for Factor-Adjusted Robust Multiple Testing'
