--- a/_config.yml
+++ b/_config.yml
@@ -922,6 +922,7 @@ issues:
     - NumericalMathematics
     - SocialSciences
     - Survival
+    suppl: 429.6 Kb
     landing: '2021'
   - slug: RJ-2021-024
     title: User-Specified General-to-Specific and Indicator Saturation Methods
