--- a/_config.yml
+++ b/_config.yml
@@ -964,6 +964,7 @@ issues:
     - Finance
     - Multivariate
     - NumericalMathematics
+    suppl: 2.6 Kb
     landing: '2021'
   - slug: RJ-2021-025
     title: 'TULIP: A Toolbox for Linear Discriminant Analysis with Penalties'
