--- a/_config.yml
+++ b/_config.yml
@@ -1014,6 +1014,47 @@ issues:
     - TeachingStatistics
     suppl: 4.4 Kb
     landing: '2021'
+  - slug: RJ-2021-006
+    title: Assembling Pharmacometric Datasets in R - The puzzle Package
+    bibtitle: Assembling Pharmacometric Datasets in R - The puzzle Package
+    author:
+    - Mario González-Sales*
+    - Olivier Barrière*
+    - Pierre Olivier Tremblay
+    - Guillaume Bonnefois
+    - Julie            Desrochers
+    - Fahima Nekka
+    bibauthor: |-
+      Mario González-Sales* and Olivier Barrière* and Pierre
+                Olivier Tremblay and Guillaume Bonnefois and Julie
+                Desrochers and Fahima Nekka
+    abstract: '  Abstract                Pharmacometric analyses are integral components
+      of the drug development process. The core of            each pharmacometric
+      analysis is a dataset. The time required to construct a pharmacometrics dataset            can
+      sometimes be higher than the effort required for the modeling per se. To simplify
+      the process, the            puzzle R package has been developed aimed at simplifying
+      and facilitating the time consuming and            error prone task of assembling
+      pharmacometrics datasets.                Puzzle consist of a series of functions
+      written in R. These functions create, from tabulated files,            datasets
+      that are compatible with the formatting requirements of the gold standard non-linear
+      mixed            effects modeling software.                With only one function,
+      puzzle(), complex pharmacometrics databases can easily be assembled.            Users
+      are able to select from different absorption processes such as zeroand first-order,
+      or a com           bination of both. Furthermore, datasets containing data from
+      one or more analytes, and/or one or            more responses, and/or time dependent
+      and/or independent covariates, and/or urine data can be            simultaneously
+      assembled.                The puzzle package is a powerful and efficient tool
+      that helps modelers, programmers and            pharmacometricians through the
+      challenging process of assembling pharmacometrics datasets.'
+    acknowledged: '2019-07-19'
+    online: '2021-01-14'
+    CRANpkgs:
+    - puzzle
+    - saemix
+    - nlmixr
+    - tidyverse
+    suppl: 448.3 Kb
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
