--- a/_config.yml
+++ b/_config.yml
@@ -466,7 +466,6 @@ issues:
     - KSPM
     - coxme
     - SKAT
-    - SPA3G
     - KRLS
     - e1071
     - np
@@ -494,6 +493,7 @@ issues:
     - Optimization
     - Spatial
     - Survival
+    suppl: 20.3 Kb
     landing: '2021'
   - slug: RJ-2021-013
     title: 'AQuadtree: an R Package for Quadtree Anonymization of Point Data'
