--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ issues:
     - MachineLearning
     - HighPerformanceComputing
     - Survival
+    suppl: 418 bytes
     landing: '2021'
   - slug: RJ-2021-002
     title: Comparing Multiple Survival Functions with Crossing Hazards in R
