--- a/_config.yml
+++ b/_config.yml
@@ -1056,6 +1056,57 @@ issues:
     - tidyverse
     suppl: 448.3 Kb
     landing: '2021'
+  - slug: RJ-2021-020
+    title: Analyzing Basket Trials under Multisource Exchangeability Assumptions
+    bibtitle: |-
+      Analyzing Basket Trials under Multisource Exchangeability
+                Assumptions
+    author:
+    - Michael J. Kane
+    - Nan Chen
+    - Alexander M. Kaizer
+    - Xun Jiang
+    - H. Amy Xia
+    - Brian P. Hobbs
+    bibauthor: |-
+      Michael J. Kane and Nan Chen and Alexander M. Kaizer and Xun
+                Jiang and H. Amy Xia and Brian P. Hobbs
+    abstract: '  Abstract Basket designs are prospective clinical trials that are
+      devised with the hypothesis that the            presence of selected molecular
+      features determine a patient’s subsequent response to a particular           “targeted”
+      treatment strategy. Basket trials are designed to enroll multiple clinical subpopulations
+      to            which it is assumed that the therapy in question offers beneficial
+      efficacy in the presence of the targeted            molecular profile. The treatment,
+      however, may not offer acceptable efficacy to all subpopulations            enrolled.
+      Moreover, for rare disease settings, such as oncology wherein these trials have
+      become            popular, marginal measures of statistical evidence are difficult
+      to interpret for sparsely enrolled            subpopulations. Consequently,
+      basket trials pose challenges to the traditional paradigm for trial            design,
+      which assumes inter-patient exchangeability. The package basket for the R programmming            environment
+      (R Core Team, 2019) facilitates the analysis of basket trials by implementing
+      multi           source exchangeability models. By evaluating all possible pairwise
+      exchangeability relationships, this            hierarchical modeling framework
+      facilitates Bayesian posterior shrinkage among a collection of discrete            and
+      pre-specified subpopulations. Analysis functions are provided to implement posterior
+      inference            of the response rates and all possible exchangeability
+      relationships between subpopulations. In            addition, the package can
+      identify “poolable” subsets of and report their response characteristics. The            functionality
+      of the package is demonstrated using data from an oncology study with subpopulations            defined
+      by tumor histology.                 Keywords: Bayesian analysis, basket design,
+      hierarchical model, master protocol, oncology, patient            heterogeneity'
+    acknowledged: '2020-05-01'
+    online: '2021-01-15'
+    CRANpkgs:
+    - basket
+    - Basket
+    - igraph
+    CTV_rev:
+    - gR
+    - Graphics
+    - Optimization
+    - Spatial
+    suppl: 452 bytes
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
