Fix month of 2020-2 issue

--- a/_config.yml
+++ b/_config.yml
@@ -19845,8 +19845,8 @@ issues:
   year: 2020
   volume: 12
   num: 2
-  month: December
-  bibmonth: december
+  month: Dec.
+  bibmonth: dec
   articles:
   - slug: editorial
     cat: Editorial
