Update html page article layout and behaviour

--- a/_site.yml
+++ b/_site.yml
@@ -2,6 +2,7 @@ name: "distill"
 title: "The R Journal"
 description: |
   The R Journal
+base_url: https://rjournal-distill.netlify.app/
 theme: theme.css
 favicon: resources/favicon.ico
 output_dir: "_site"
@@ -22,8 +23,14 @@ navbar:
       href: about.html
     - icon: fa fa-rss
       href: articles.xml
+rss:
+  full_content: TRUE
+  categories:
+    - articles
+    - issues
 collections:
   articles:
     categories: true
     categories_metadata: true
+    authors_metadata: true
 output: distill::distill_article
