--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,7 @@ theme: theme.css
 favicon: resources/favicon.ico
 output_dir: "_site"
 navbar:
+  search: true
   logo:
     image: resources/rlogo.png
     href: index.html
