first article online

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,32 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
+  - slug: RJ-2021-026
+    title: 'SEEDCCA: An Integrated R-Package for Canonical Correlation Analysis and
+      Partial Least Squares'
+    bibtitle: |-
+      SEEDCCA: An Integrated R-Package for Canonical Correlation
+                Analysis and Partial Least Squares
+    author:
+    - Bo-Young Kim
+    - Yunju Im
+    - Jae Keun Yoo
+    bibauthor: Bo-Young Kim and Yunju Im and Jae Keun Yoo
+    abstract: '  Abstract Canonical correlation analysis (CCA) has a long history
+      as an explanatory statistical method            in high-dimensional data analysis
+      and has been successfully applied in many science fields such as            chemomtrics,
+      pattern recognition, genomic sequence analysis and so on. The so-called seedCCA
+      is a            newly developed R package, and it implements not only the standard
+      and seeded CCA but also partial            least squares. The package enables
+      us to fit CCA to large-p and small-n data. The paper provides a            complete
+      guide. Also, the seeded CCA application results are compared with the regularized
+      CCA in            the existing R package. It is believed that the package along
+      with the paper will contribute to high           dimensional data analysis in
+      various science field practitioners and that the statistical methodologies            in
+      multivariate analysis become more fruitful.'
+    acknowledged: '2019-07-18'
+    online: '2021-06-07'
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -21078,7 +21104,7 @@ issues:
     author:
     - Mariachiara Fortuna
     - Francesca Vitalini
-    - 'Mirko Signorelli'
+    - Mirko Signorelli
     - Emanuela Furfaro
     - Federico Marini
     - Gert Janssenswillen'
@@ -21087,8 +21113,10 @@ issues:
     - Andrea Guzzo
     - Roberta Sirovich
     - Andrea
-    title: 'e-Rum2020: how we turned a physical conference into a successful virtual event'
-    bibtitle: 'e-Rum2020: how we turned a physical conference into a successful virtual event'
+    title: 'e-Rum2020: how we turned a physical conference into a successful virtual
+      event'
+    bibtitle: 'e-Rum2020: how we turned a physical conference into a successful virtual
+      event'
     bibauthor: |-
       Mariachiara Fortuna and Francesca Vitalini and Mirko
                 Signorelli and Emanuela Furfaro and Federico
@@ -21096,3 +21124,4 @@ issues:
                 Porreca and Riccardo L. Rossi and Andrea Guzzo and
                 Roberta Sirovich and Andrea
     pages: '416'
+
