second article online

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,49 @@ issues:
     acknowledged: '2019-07-18'
     online: '2021-06-07'
     landing: '2021'
+  - slug: RJ-2021-027
+    title: 'npcure: An R Package for Nonparametric Inference in Mixture Cure Models'
+    bibtitle: |-
+      npcure: An R Package for Nonparametric Inference in Mixture
+                Cure Models
+    author:
+    - Ana López-Cheda
+    - M. Amalia Jácome
+    - Ignacio López-de-Ullibarri
+    bibauthor: |-
+      Ana López-Cheda and M. Amalia Jácome and Ignacio López-de-
+                Ullibarri
+    abstract: '  Abstract Mixture cure models have been widely used to analyze survival
+      data with a cure fraction.            They assume that a subgroup of the individuals
+      under study will never experience the event (cured            subjects). So,
+      the goal is twofold: to study both the cure probability and the failure time
+      of the            uncured individuals through a proper survival function (latency).
+      The R package npcure implements a            completely nonparametric approach
+      for estimating these functions in mixture cure models, considering            right-censored
+      survival times. Nonparametric estimators for the cure probability and the latency
+      as            functions of a covariate are provided. Bootstrap bandwidth selectors
+      for the estimators are included.            The package also implements a nonparametric
+      covariate significance test for the cure probability            which can be
+      applied with a continuous, discrete or qualitative covariate.'
+    acknowledged: '2019-07-19'
+    online: '2021-06-07'
+    CRANpkgs:
+    - smcure
+    - NPHMC
+    - flexsurvcure
+    - rcure
+    - geecure
+    - miCoPTCM
+    - mixcure
+    - GORcure
+    - intercure
+    - npcure
+    - condSURV
+    - prodlim
+    - survidm
+    - KMsurv
+    CTV_rev: Survival
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
