3rd article online

--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,31 @@ issues:
     - KMsurv
     CTV_rev: Survival
     landing: '2021'
+  - slug: RJ-2021-028
+    title: 'JMcmprsk: An R Package for Joint Modelling of Longitudinal and Survival
+      Data with Competing Risks'
+    bibtitle: |-
+      JMcmprsk: An R Package for Joint Modelling of Longitudinal
+                and Survival Data with Competing Risks
+    author:
+    - Hong Wang
+    - Ning Li
+    - Shanpeng Li
+    - Gang Li*
+    bibauthor: Hong Wang and Ning Li and Shanpeng Li and Gang Li*
+    abstract: '  Abstract In this paper, we describe an R package named JMcmprsk,
+      for joint modelling of longitudinal            and survival data with competing
+      risks. The package in its current version implements two joint            models
+      of longitudinal and survival data proposed to handle competing risks survival
+      data together            with continuous and ordinal longitudinal outcomes respectively
+      (Elashoff et al., 2008; Li et al., 2010).            The corresponding R implementations
+      are further illustrated with real examples. The package also            provides
+      simulation functions to simulate datasets for joint modelling with continuous
+      or ordinal            outcomes under the competing risks scenario, which provide
+      useful tools to validate and evaluate            new joint modelling methods.'
+    acknowledged: '2020-04-04'
+    online: '2021-06-07'
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
