almost all accepted articles now except for 2020-158

--- a/_config.yml
+++ b/_config.yml
@@ -692,6 +692,440 @@ issues:
     - Phylogenetics
     - TeachingStatistics
     landing: '2021'
+  - slug: RJ-2021-044
+    title: OneStep - Le Cam's one-step estimation procedure
+    bibtitle: OneStep - Le Cam's one-step estimation procedure
+    author:
+    - Alexandre Brouste
+    - Christophe Dutang & Darel Noutsa Mieniedou
+    bibauthor: |-
+      Alexandre Brouste and Christophe Dutang & Darel Noutsa
+                Mieniedou
+    abstract: '  Abstract The OneStep package proposes principally an eponymic function
+      that numerically computes            Le Cam’s one-step estimator which is asymptotically
+      efficient and can be computed faster than the            maximum likelihood
+      estimator for large datasets. Monte-Carlo simulations are carried out for several            examples
+      (discrete and continuous probability distributions) in order to exhibit the
+      performance of Le            Cam’s one-step estimation procedure in terms of
+      efficiency and computational cost on observation            samples of finite
+      size.'
+    acknowledged: '2020-10-27'
+    online: '2021-06-08'
+    landing: '2021'
+  - slug: RJ-2021-045
+    title: 'The R Package smicd: Statistical Methods for Interval-Censored Data'
+    bibtitle: |-
+      The R Package smicd: Statistical Methods for Interval-
+                Censored Data
+    author: Paul Walter
+    bibauthor: Paul Walter
+    abstract: '  Abstract The package allows the use of two new statistical methods
+      for the analysis of interval           censored data: 1) direct estimation/prediction
+      of statistical indicators, and 2) linear (mixed) regression            analysis.
+      Direct estimation of statistical indicators, for instance poverty and inequality
+      indicators,            is facilitated by a non-parametric kernel density algorithm.
+      The algorithm is able to account for            weights in the estimation of
+      statistical indicators. The standard errors of the statistical indicators are            estimated
+      with a non-parametric bootstrap. Furthermore, the package offers statistical
+      methods for            the estimation of linear and linear mixed regression
+      models with an interval-censored dependent            variable, particularly
+      random slope and random intercept models. Parameter estimates are obtained            through
+      a stochastic expectation-maximization algorithm. Standard errors are estimated
+      using a            non-parametric bootstrap in the linear regression model and
+      by a parametric bootstrap in the linear            mixed regression model. To
+      handle departures from the model assumptions, fixed (logarithmic) and            data-driven
+      (Box-Cox) transformations are incorporated into the algorithm.'
+    acknowledged: []
+    online: '2021-06-08'
+    CRANpkgs:
+    - actuar
+    - fitdistrplus
+    - smicd
+    - stats
+    - MASS
+    - survival
+    - lme4
+    - nlme
+    - ordinal
+    - laeken
+    - mlmRev
+    CTV_rev:
+    - Econometrics
+    - Psychometrics
+    - SocialSciences
+    - Distributions
+    - Environmetrics
+    - OfficialStatistics
+    - Finance
+    - SpatioTemporal
+    - Survival
+    - ChemPhys
+    - ClinicalTrials
+    - Multivariate
+    - NumericalMathematics
+    - Robust
+    - Spatial
+    - TeachingStatistics
+    landing: '2021'
+  - slug: RJ-2021-046
+    title: 'krippendorffsalpha: An R Package for Measuring Agreement Using Krippendorff''s
+      Alpha Coefficient'
+    bibtitle: |-
+      krippendorffsalpha: An R Package for Measuring Agreement
+                Using Krippendorff's Alpha Coefficient
+    author: John Hughes
+    bibauthor: John Hughes
+    abstract: '  Abstract R package krippendorffsalpha provides tools for measuring
+      agreement using Krippen           dorff’s α coefficient, a well-known nonparametric
+      measure of agreement (also called inter-rater            reliability and various
+      other names). This article first develops Krippendorff’s α in a natural way,
+      and            situates α among statistical procedures. Then the usage of package
+      krippendorffsalpha is illustrated            via analyses of two datasets, the
+      latter of which was collected during an imaging study of hip cartilage.            The
+      package permits users to apply the α methodology using built-in distance functions
+      for the            nominal, ordinal, interval, or ratio levels of measurement.
+      User-defined distance functions are also            supported. The fitting function
+      can accommodate any number of units, any number of coders, and            missingness.
+      Bootstrap inference is supported, and the bootstrap computation can be carried
+      out in            parallel.'
+    acknowledged: '2020-10-30'
+    online: '2021-06-08'
+    CRANpkgs:
+    - krippendorffsalpha
+    - irr
+    - icr
+    - irrCAC
+    - pbapply
+    CTV_rev:
+    - HighPerformanceComputing
+    - Psychometrics
+    landing: '2021'
+  - slug: RJ-2021-047
+    title: 'Working with CRSP/COMPUSTAT in R: Reproducible Empirical Asset Pricing'
+    bibtitle: |-
+      Working with CRSP/COMPUSTAT in R: Reproducible Empirical
+                Asset Pricing
+    author: Majeed Simaan
+    bibauthor: Majeed Simaan
+    abstract: '  Abstract It is common to come across SAS or Stata manuals while working
+      on academic empirical            finance research. Nonetheless, given the popularity
+      of open-source programming languages such as R,            there are fewer resources
+      in R covering popular databases such as CRSP and COMPUSTAT. The aim            of
+      this article is to bridge the gap and illustrate how to leverage R in working
+      with both datasets. As            an application, we illustrate how to form
+      size-value portfolios with respect to Fama and French (1993)            and
+      study the sensitivity of the results with respect to different inputs. Ultimately,
+      the purpose of the            article is to advocate reproducible finance research
+      and contribute to the recent idea of “Open Source            Cross-Sectional
+      Asset Pricing”, proposed by Chen and Zimmermann (2020).'
+    acknowledged: '2020-10-30'
+    online: '2021-06-08'
+    CRANpkgs:
+    - data.table
+    - lubridate
+    - ggplot2
+    - parallel
+    - plyr
+    - dplyr
+    - rollRegres
+    CTV_rev:
+    - TimeSeries
+    - Databases
+    - Finance
+    - Graphics
+    - HighPerformanceComputing
+    - ModelDeployment
+    - Phylogenetics
+    - ReproducibleResearch
+    - TeachingStatistics
+    landing: '2021'
+  - slug: RJ-2021-048
+    title: A Unifying Framework for Parallel and Distributed Processing in R using
+      Futures
+    bibtitle: |-
+      A Unifying Framework for Parallel and Distributed Processing
+                in R using Futures
+    author: Henrik Bengtsson
+    bibauthor: Henrik Bengtsson
+    abstract: '  Abstract A future is a programming construct designed for concurrent
+      and asynchronous evaluation            of code, making it particularly useful
+      for parallel processing. The future package implements the            Future
+      API for programming with futures in R. This minimal API provides sufficient
+      constructs for            implementing parallel versions of well-established,
+      high-level map-reduce APIs. The future ecosystem            supports exception
+      handling, output and condition relaying, parallel random number generation,
+      and            automatic identification of globals lowering the threshold to
+      parallelize code. The Future API bridges            parallel frontends with
+      parallel backends following the philosophy that end-users are the ones who            choose
+      the parallel backend while the developer focuses on what to parallelize. A variety
+      of backends            exist and third-party contributions meeting the specifications,
+      which ensure that the same code works            on all backends, are automatically
+      supported. The future framework solves several problems not            addressed
+      by other parallel frameworks in R.'
+    acknowledged: '2020-10-30'
+    online: '2021-06-08'
+    CRANpkgs:
+    - future
+    - foreach
+    - multicore
+    - snow
+    - doMC
+    - doParallel
+    - doMPI
+    - doRedis
+    - progressr
+    - globals
+    - codetools
+    - future.apply
+    - furrr
+    - promises
+    - listenv
+    - future.callr
+    - callr
+    - future.batchtools
+    - batchtools
+    - googleComputeEngineR
+    - parallelly
+    - digest
+    - future.tests
+    - caret
+    - glmnet
+    - NMF
+    - plyr
+    - TSP
+    - doFuture
+    - DBI
+    - xml2
+    - stan
+    - data.table
+    - microbenchmark
+    - bench
+    - proffer
+    - profvis
+    - future.BatchJobs
+    - BatchJobs
+    - purrr
+    - drake
+    - shiny
+    - plumber
+    - civis
+    BIOpkgs: BiocParallel
+    CTV_rev:
+    - HighPerformanceComputing
+    - WebTechnologies
+    - MachineLearning
+    - Databases
+    - Finance
+    - ModelDeployment
+    - Multivariate
+    - Optimization
+    - ReproducibleResearch
+    - Survival
+    - TeachingStatistics
+    - TimeSeries
+    landing: '2021'
+  - slug: RJ-2021-049
+    title: Analysing Dependence Between Point Processes in Time Using IndTestPP
+    bibtitle: |-
+      Analysing Dependence Between Point Processes in Time Using
+                IndTestPP
+    author:
+    - Cebrián
+    - A.C.
+    - Asín
+    - J.
+    bibauthor: Cebrián and A.C. and Asín and J.
+    abstract: '  Abstract The need of analysing the dependence between two or more
+      point processes in time appears            in many modelling problems related
+      to the occurrence of events, such as the occurrence of climate            events
+      at different spatial locations, or synchrony detection in spike train analysis.
+      The package            IndTestPP provides a general framework for all the steps
+      in this type of analysis, and one of its main            features is the implementation
+      of three families of tests to study independence given the intensities of            the
+      processes, which are not only useful to assess independence but also to identify
+      factors causing            dependence. The package also includes functions for
+      generating different types of dependent point            processes, and implements
+      computational statistical inference tools using them. An application to            characterize
+      the dependence between the occurrence of extreme heat events in three Spanish
+      locations            using the package is shown.'
+    acknowledged: '2020-10-30'
+    online: '2021-06-08'
+    CRANpkgs:
+    - IndTestPP
+    - spatstat
+    - stpp
+    - splancs
+    - IDSpatialStats
+    - NHPoisson
+    - PtProcess
+    - mmpp
+    - mppa
+    - stats
+    CTV_rev:
+    - Spatial
+    - SpatioTemporal
+    - Survival
+    landing: '2021'
+  - slug: RJ-2021-050
+    title: 'Conversations in time: interactive visualisation to explore structured
+      temporal data'
+    bibtitle: |-
+      Conversations in time: interactive visualisation to explore
+                structured temporal data
+    author:
+    - Earo Wang
+    - Dianne Cook
+    bibauthor: Earo Wang and Dianne Cook
+    abstract: '  Abstract Temporal data often has a hierarchical structure, defined
+      by categorical variables describing            different levels, such as political
+      regions or sales products. Nesting of categorical variables produces a            hierarchical
+      structure. The tsibbletalk package is developed to allow a user to interactively
+      explore            temporal data, relative to the nested or crossed structures.
+      It can help to discover differences between            category levels, and
+      uncover interesting periodic or aperiodic slices. The package implements a shared            tsibble
+      object that allows for linked brushing between coordinated views, and a shiny
+      module that            aids in wrapping time lines for seasonal patterns. The
+      tools are demonstrated using two data examples:            domestic tourism
+      in Australia and pedestrian traffic in Melbourne.'
+    acknowledged: '2020-10-30'
+    online: '2021-06-08'
+    CRANpkgs:
+    - tsibbletalk
+    - tsibble
+    - tsibbledata
+    - tidyverse
+    - feasts
+    - fable
+    - shiny
+    - htmlwidgets
+    - plotly
+    - rbokeh
+    - leaflet
+    - crosstalk
+    - grDevices
+    - loon
+    - ggplot2
+    CTV_rev:
+    - TimeSeries
+    - TeachingStatistics
+    - WebTechnologies
+    - Graphics
+    - MissingData
+    - Phylogenetics
+    - Spatial
+    suppl: 8.4 Kb
+    landing: '2021'
+  - slug: RJ-2021-051
+    title: Automating Reproducible, Collaborative Clinical Trial Document Generation
+      with the listdown Package
+    bibtitle: |-
+      Automating Reproducible, Collaborative Clinical Trial
+                Document Generation with the listdown Package
+    author:
+    - Michael Kane
+    - Xun Jiang
+    - Simon Urbanek
+    bibauthor: Michael Kane and Xun Jiang and Simon Urbanek
+    abstract: '  Abstract The conveyance of clinical trial explorations and analysis
+      results from a statistician to a clinical            investigator is a critical
+      component to the drug development and clinical research cycle. Automating            the
+      process of generating documents for data descriptions, summaries, exploration,
+      and analysis            allows statistician to provide a more comprehensive
+      view of the information captured by a clinical            trial and efficient
+      generation of these documents allows the statistican to focus more on the conceptual            development
+      of a trial or trial analysis and less on the implementation of the summaries
+      and results            on which decisions are made. This paper explores the
+      use of the listdown package for automating            reproducible documents
+      in clinical trials that facilitate the collaboration between statisticians and            clinicians
+      as well as defining an analysis pipeline for document generation.'
+    acknowledged: '2020-11-02'
+    online: '2021-06-08'
+    landing: '2021'
+  - slug: RJ-2021-052
+    title: Towards a Grammar for Processing Clinical Trial Data
+    bibtitle: Towards a Grammar for Processing Clinical Trial Data
+    author: Michael J. Kane
+    bibauthor: Michael J. Kane
+    abstract: '  Abstract The goal of this paper is help define a path toward a grammar
+      for processing clinical trials by            a) defining a format in which we
+      would like to represent data from standardized clinical trial data b)            describing
+      a standard set of operations to transform clinical trial data into this format,
+      and c) to identify            a set of verbs and other functionality to facilitate
+      data processing and encourage reproducibility in the            processing of
+      these data. It provides a background on standard clinical trial data and goes
+      through a            simple preprocessing example illustrating the value of
+      the proposed approach through the use of the            forceps package, which
+      is currently being used for data of this kind.'
+    acknowledged: '2020-11-02'
+    online: '2021-06-08'
+    landing: '2021'
+  - slug: RJ-2021-053
+    title: Reproducible Summary Tables with the gtsummary Package
+    bibtitle: Reproducible Summary Tables with the gtsummary Package
+    author:
+    - Daniel D. Sjoberg
+    - Karissa Whiting
+    - Michael Curry
+    bibauthor: Daniel D. Sjoberg and Karissa Whiting and Michael Curry
+    abstract: '  Abstract The gtsummary package provides an elegant and flexible way
+      to create publication-ready            summary tables in R. A critical part
+      of the work of statisticians, data scientists, and analysts is            summarizing
+      data sets and regression models in R and publishing or sharing polished summary
+      tables.            The gtsummary package was created to streamline these everyday
+      analysis tasks by allowing users to            easily create reproducible summaries
+      of data sets, regression models, survey data, and survival data            with
+      a simple interface and very little code. The package follows a tidy framework,
+      making it easy to            integrate in standard data workflows, and offers
+      many table customization features through function            arguments, helper
+      functions, and custom themes.'
+    acknowledged: '2021-01-15'
+    online: '2021-06-08'
+    CRANpkgs:
+    - gtsummary
+    - broom
+    - gt
+    - magrittr
+    - tidyselect
+    - tidyverse
+    - skimr
+    - stargazer
+    - finalfit
+    - tableone
+    - glue
+    - survey
+    - flextable
+    - huxtable
+    - kableExtra
+    CTV_rev:
+    - ReproducibleResearch
+    - OfficialStatistics
+    - SocialSciences
+    - Survival
+    - WebTechnologies
+    landing: '2021'
+  - slug: RJ-2021-054
+    title: 'Regularized Transformation Models: The tramnet Package'
+    bibtitle: 'Regularized Transformation Models: The tramnet Package'
+    author:
+    - Lucas Kook
+    - Torsten Hothorn
+    bibauthor: Lucas Kook and Torsten Hothorn
+    abstract: '  Abstract The tramnet package implements regularized linear transformation
+      models by combining the            flexible class of transformation models from
+      tram with constrained convex optimization implemented            in CVXR. Regularized
+      transformation models unify many existing and novel regularized regression            models
+      under one theoretical and computational framework. Regularization strategies
+      implemented            for transformation models in tramnet include the LASSO,
+      ridge regression and the elastic net and            follow the parametrization
+      in glmnet. Several functionalities for optimizing the hyperparameters,            including
+      model-based optimization based on the mlrMBO package, are implemented. A multitude            of
+      S3 methods are deployed for visualization, handling and simulation purposes.
+      This work aims at            illustrating all facets of tramnet in realistic
+      settings and comparing regularized transformation models            with existing
+      implementations of similar models.'
+    acknowledged: '2021-01-15'
+    online: '2021-06-08'
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
