Add default description for articles feed

--- a/_site.yml
+++ b/_site.yml
@@ -34,4 +34,5 @@ collections:
     categories: true
     categories_metadata: true
     authors_metadata: true
+    description: Articles published in the R Journal
 output: distill::distill_article
