Submissions -> Submit in navbar

--- a/_site.yml
+++ b/_site.yml
@@ -18,7 +18,7 @@ navbar:
       href: articles.html
     - text: "Issues"
       href: issues.html
-    - text: "Submissions"
+    - text: "Submit"
       href: submissions.html
     - text: "About"
       href: about.html
