Update date metadata for articles

--- a/_site.yml
+++ b/_site.yml
@@ -1,4 +1,4 @@
-name: "distill"
+name: "rjournal"
 title: "The R Journal"
 description: |
   The R Journal
@@ -35,4 +35,4 @@ collections:
     categories_metadata: true
     authors_metadata: true
     description: Articles published in the R Journal
-output: distill::distill_article
+output: rjdistill::rjournal_web_article
