--- a/_config.yml
+++ b/_config.yml
@@ -1126,6 +1126,49 @@ issues:
     acknowledged: '2021-01-15'
     online: '2021-06-08'
     landing: '2021'
+  - slug: RJ-2021-055
+    title: 'distr6: R6 Object-Oriented Probability Distributions Interface in R'
+    bibtitle: |-
+      distr6: R6 Object-Oriented Probability Distributions
+                Interface in R
+    author:
+    - Raphael Sonabend
+    - Franz J. Király
+    bibauthor: Raphael Sonabend and Franz J. Király
+    abstract: ' Abstract distr6 is an object-oriented (OO) probability distributions
+      interface leveraging the extensibil          ity and scalability of R6, and
+      the speed and efficiency of Rcpp. Over 50 probability distributions are           currently
+      implemented in the package with ‘core’ methods including density, distribution,
+      and gener          ating functions, and more ‘exotic’ ones including hazards
+      and distribution function anti-derivatives.           In addition to simple
+      distributions, distr6 supports compositions such as truncation, mixtures, and           product
+      distributions. This paper presents the core functionality of the package and
+      demonstrates           examples for key use-cases. In addition this paper provides
+      a critical review of the object-oriented           programming paradigms in
+      R and describes some novel implementations for design patterns and core           object-oriented
+      features introduced by the package for supporting distr6 components.  '
+    acknowledged: '2020-10-30'
+    online: '2021-06-17'
+    CRANpkgs:
+    - distr6
+    - distr
+    - R6
+    - extraDistr
+    - actuar
+    - distributions3
+    - distributional
+    - mistr
+    - R62S3
+    - Rcpp
+    - set6
+    - microbenchmark
+    CTV_rev:
+    - Distributions
+    - NumericalMathematics
+    - Finance
+    - HighPerformanceComputing
+    - Robust
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
