--- a/_config.yml
+++ b/_config.yml
@@ -648,27 +648,27 @@ issues:
     - Vasilis Pagonis
     - Christian Laag
     - Ena Rajovic
-    - '           Christoph Schmidt'
+    - '          Christoph Schmidt'
     bibauthor: |-
       Sebastian Kreutzer and Johannes Friedrich and Vasilis
                 Pagonis and Christian Laag and Ena Rajovic and
                 Christoph Schmidt
-    abstract: '  Abstract Luminescence phenomena of insulators and semiconductors
-      (e.g., natural minerals such            as quartz) have various application
-      domains. For instance, Earth Sciences and archaeology exploit            luminescence
+    abstract: ' Abstract Luminescence phenomena of insulators and semiconductors (e.g.,
+      natural minerals such           as quartz) have various application domains.
+      For instance, Earth Sciences and archaeology exploit           luminescence
       as a dating method. Herein, we present the R package RLumCarlo implementing
-      sets of            luminescence models to be simulated with Monte Carlo (MC)
-      methods. MC methods make a powerful            ally to all kind of simulation
-      attempts involving stochastic processes. Luminescence production is            such
+      sets of           luminescence models to be simulated with Monte Carlo (MC)
+      methods. MC methods make a powerful           ally to all kind of simulation
+      attempts involving stochastic processes. Luminescence production is           such
       a stochastic process in the form of charge (electron-hole pairs) interaction
-      within insulators            and semiconductors. To simulate luminescence-signal
-      curves, we distribute single and independent            MC processes to virtual
-      MC clusters. RLumCarlo comes with a modularised design and consistent            user
+      within insulators           and semiconductors. To simulate luminescence-signal
+      curves, we distribute single and independent           MC processes to virtual
+      MC clusters. RLumCarlo comes with a modularised design and consistent           user
       interface: (1) C++ functions represent the modelling core and implement models
-      for specific            stimulations modes. (2) R functions give access to combinations
-      of models and stimulation modes,            start the simulation and render
-      terminal and graphical feedback. The combination of MC clusters            supports
-      the simulation of complex luminescence phenomena.'
+      for specific           stimulations modes. (2) R functions give access to combinations
+      of models and stimulation modes,           start the simulation and render terminal
+      and graphical feedback. The combination of MC clusters           supports the
+      simulation of complex luminescence phenomena.  '
     acknowledged: []
     online: '2021-06-07'
     CRANpkgs:
